# cmake_link_fail

./: .gitignore  Cargo.toml  build.rs
cpp_lib/: CMakeLists.txt
cpp_lib/liba/: CMakeLists.txt
cpp_lib/liba/include/: liba.h
cpp_lib/liba/src/: lib.cpp
cpp_lib/libb/: CMakeLists.txt
cpp_lib/libb/include/: Other.h
cpp_lib/libb/src/: lib.cpp
src/: bridge.rs  main.rs
